--- a/style.css
+++ b/style.css
@@ -35,10 +35,9 @@ u
 
 div.gallery 
 {
-    margin: 17px;
+  
     border: 1px solid #ccc;
-    float: left;
-    width: 180px;
+    width: 50%;
 }
 
 div.gallery:hover 
@@ -48,6 +47,7 @@ div.gallery:hover
 
 div.gallery img 
 {
+	text-align: center;
     width: 100%;
     height: auto;
 }
