--- a/small.css
+++ b/small.css
@@ -60,9 +60,9 @@ div.desc
 }
 
 button {
-    background-color: black; 
+    background-color:#ffff1a ; 
     border: none;
-    color: white;
+    color: black;
     text-align: center;
     text-decoration: none;
     display: inline-block;
