--- a/style.css
+++ b/style.css
@@ -55,29 +55,36 @@ div.desc
     color: white;
 }
 
-button {
+button 
+{
+	top: 0;
+	right: 0;
+	position: fixed;
     background-color: black; 
     border: none;
-    color: white;
+    color: #ffcc00;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 35px;
-    margin: 4px 2px;
+    font-size: 63px;
     cursor: pointer;
 }
 
 #y
 {
+	font-size: 35px;
+	top: 0;
+	left: 0;
+	padding-left:12%;
 	text-align: center;
 	color: black;
 	background-color:#ffff1a;
 }
 
 #resnav
-{	
-	top:0;
-	left:0;
+{
+	top: 0;
+	left: 0;
 	display: block;
 	background-color:#ffff1a; 
 	position: fixed;
@@ -104,7 +111,7 @@ button {
 		{
 			float: left;
 			display: block;
-			font-size: 35px;
+			font-size: 25px;
 			padding:  50px 0px 0px 20px;
 			color:black;
 			font-family: 'Cookie', cursive; 
