--- a/small.css
+++ b/small.css
@@ -6,7 +6,7 @@ body
 }
 
 h1
-{	
+{
 	padding-top: 30px;
 	color: #ffff1a;
 	text-align: center;	
@@ -62,16 +62,16 @@ div.desc
 
 button 
 {
-    top: 0;
-    right: 0; 
+	top: 0;
+	right: 0; 
     border: none;
     color: #ffcc00;
     background-color: black;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size:40px;
-    position: fixed;	
+    font-size: 40px;
+  	position: fixed;	
 }
 
 #y
@@ -106,13 +106,13 @@ button
 	background-color: black;
 }
 
-#paneltdo,#panelcandh
+#paneltdo,#panelcandh,#paneltrip
 		{
 			display: none;			
 			width: 100%;		
 			background-color: black;		
 		}				
-#flipintro,#fliptdo,#flipcandh
+#flipintro,#fliptdo,#flipcandh,#fliptrip
 		{
 
 			float: left;
@@ -122,7 +122,7 @@ button
 			color:black;
 			font-family: 'Cookie', cursive; 
 		}
-#mflipintro:hover,#mfliptdo:hover,#mflipcandh:hover
+#flipintro:hover,#fliptdo:hover,#flipcandh:hover,#fliptrip:hover
 		{
 			color: blue;
 			cursor: pointer;
