--- a/small.css
+++ b/small.css
@@ -65,7 +65,7 @@ button
 	top: 0;
 	right: 0; 
     border: none;
-    color: #ffcc00;
+    color: white;
     background-color: black;
     text-align: center;
     text-decoration: none;
