--- a/small.css
+++ b/small.css
@@ -66,7 +66,7 @@ button
 	right: 0; 
     border: none;
     color: white;
-    background-color: black;
+    background-color: #ffcc00;
     text-align: center;
     text-decoration: none;
     display: inline-block;
