--- a/small.css
+++ b/small.css
@@ -67,6 +67,7 @@ button
 	margin-right: 3%; 
 	margin-top: 3%;
 	border: none;
+	border-radius: 20%;
     	color: white;
     	background-color: #ffcc00;
     	text-align: center;
