--- a/small.css
+++ b/small.css
@@ -1,32 +1,3 @@
-body
-{
-	background-color: black;
-}
-
-h2
-{
-	
-	color: #ffff1a;
-	text-align: center;	
-	font-size: 30px;
-	font-family: 'Dancing Script', cursive;
-}
-
-p
-{
-	color: white;
-	text-align: center;
-	font-size: 17px;
-	margin: 0 auto ;
-	font-family: 'Cookie', cursive;
-}
-
-u
-{
-	color: #ffdb4d;
-	font-family: 'Cookie' cursive;
-}
-
 *
 {
 	margin: 0;
@@ -34,22 +5,21 @@ u
 
 html,body
 {
-	height: 80%;
+	height: 100%;
 	background-color: black;
-
 }
 
 .sect
 {
 	height: 100%;
-	background-size: contain;
+	background-size: cover;
 	background-repeat: no-repeat;
 	background-attachment: fixed; 
 }
 
 .subSect
 {
-	height: 40%;
+	height: 50%;
 	background-color: black;
 }
 
@@ -91,4 +61,37 @@ html,body
 .sectEight
 {
 	background-image: url("http://wallpapercave.com/wp/MvtBAPM.jpg");
+}
+
+*
+{
+	margin: 0;
+}
+
+html,body
+{
+	height: 100%;
+}
+
+h1
+{
+	color: #ffff1a;
+	text-align: center;	
+	font-size: 60px;
+	font-family: 'Sintony', sans-serif;
+}
+
+p
+{
+	color: white;
+	text-align: center;
+	font-size: 28px;
+	margin: 0px 200px 0px 200px ;
+	font-family: 'Cookie', cursive;
+}
+
+u
+{
+	color: #ffdb4d;
+	font-family: 'Cookie' cursive;
 }
