--- a/small.css
+++ b/small.css
@@ -45,6 +45,7 @@ html,body
 	background-size: contain;
 	background-repeat: no-repeat;
 	background-attachment: fixed; 
+	background-position: 50% 50%;
 }
 
 .subSect
