--- a/small.css
+++ b/small.css
@@ -1,3 +1,32 @@
+body
+{
+	background-color: black;
+}
+
+h2
+{
+	
+	color: #ffff1a;
+	text-align: center;	
+	font-size: 30px;
+	font-family: 'Dancing Script', cursive;
+}
+
+p
+{
+	color: white;
+	text-align: center;
+	font-size: 17px;
+	margin: 0 auto ;
+	font-family: 'Cookie', cursive;
+}
+
+u
+{
+	color: #ffdb4d;
+	font-family: 'Cookie' cursive;
+}
+
 *
 {
 	margin: 0;
@@ -5,23 +34,23 @@
 
 html,body
 {
-	height: 100%;
+	height: 80%;
 	background-color: black;
+
 }
 
 .sect
 {
-
 	height: 100%;
 	background-size: cover;
-	background-position: fixed;
 	background-repeat: no-repeat;
 	background-attachment: fixed; 
+	background-position: center;
 }
 
 .subSect
 {
-	height: 50%;
+	height: 40%;
 	background-color: black;
 }
 
@@ -63,39 +92,6 @@ html,body
 .sectEight
 {
 	background-image: url("http://wallpapercave.com/wp/MvtBAPM.jpg");
-}
-
-*
-{
-	margin: 0;
-}
-
-html,body
-{
-	height: 100%;
-}
-
-h2
-{
-	color: #ffff1a;
-	text-align: center;	
-	font-size: 60px;
-	font-family: 'Sintony', sans-serif;
-}
-
-p
-{
-	color: white;
-	text-align: center;
-	font-size: 28px;
-	margin: 0px 200px 0px 200px ;
-	font-family: 'Cookie', cursive;
-}
-
-u
-{
-	color: #ffdb4d;
-	font-family: 'Cookie' cursive;
 }
 
 
