--- a/small.css
+++ b/small.css
@@ -41,8 +41,8 @@ html,body
 
 .sect
 {
-	height: 500px;
-	background-size: cover;
+	height: 100%;
+	background-size: contain;
 	background-repeat: no-repeat;
 	background-attachment: fixed; 
 	background-position: center;
