--- a/small.css
+++ b/small.css
@@ -39,6 +39,14 @@ html,body
 
 }
 
+.sect
+{
+	height: 100%;
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-attachment: fixed; 
+	background-position: center;
+}
 
 .subSect
 {
