--- a/style.css
+++ b/style.css
@@ -97,4 +97,9 @@ u
 	font-family: 'Cookie' cursive;
 }
 
+@media only screen and (max-device-width: 1024px) {
+    .sect {
+        background-attachment: scroll;
+    }
+}
 
